[package]
name = "philiprehberger-event-bus"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Thread-safe event bus with typed listeners for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-event-bus"
keywords = ["event", "bus", "emitter", "pubsub", "observer"]
categories = ["concurrency", "data-structures"]
