[package]
name = "philiprehberger-event-bus"
version = "0.2.5"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Thread-safe event bus with typed listeners for Rust"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-event-bus"
readme = "README.md"
rust-version = "1.70"
documentation = "https://docs.rs/philiprehberger-event-bus"
keywords = ["event", "bus", "emitter", "pubsub", "observer"]
categories = ["concurrency", "data-structures"]
